--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
       <span class="title title_short">[ UT ]</span> 
     </nav>
 
-    <!-- First Page -->
+    <!--  welcome  -->
     <div class="row">
       <div class="col-sm-12">
         <div class="welcome_page">
@@ -37,8 +37,55 @@
       </div>
     </div>  
 
-    <!-- Second Page  -->
+    <!-- mission  -->
     <div class="row mission_page">
+      <div class="col-sm-12 static_page_container">
+        <div class="col-sm-6">
+          <img class="mission_rec_pic" src="images/rec-mock.png" alt="">
+        </div>  
+        <div class="col-sm-6">
+          <div class="mission_content col-sm-10">
+            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of
+          </div>
+        </div>  
+      </div>
+    </div>   
+
+    <!-- tagline  -->
+    <div class="row tagline_page">
+      <div class="col-sm-12">
+        <div class="text-center tagline_content">
+          Urban Temple aims to provide a space admis
+        </div>
+      </div>
+    </div>  
+
+    <!-- discipline -->
+    <div class="row discipline_page">
+      <div class="col-sm-12 static_page_container margin_bottom_50">
+        <div class="col-sm-4 no-side-padding text-center">
+          <img class="discipline_cir_pic" src="images/circle-mock.png" alt="">
+          <div class="discipline_description">
+            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  
+          </div> 
+        </div>
+        <div class="col-sm-4 no-side-padding text-center">    
+          <img class="discipline_cir_pic" src="images/circle-mock.png" alt="">
+          <div class="discipline_description">
+            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  
+          </div> 
+        </div> 
+        <div class="col-sm-4 no-side-padding text-center">  
+          <img class="discipline_cir_pic"src="images/circle-mock.png" alt="">
+          <div class="discipline_description">
+            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  
+          </div> 
+        </div>     
+      </div> 
+    </div>   
+    
+    <!-- schedule -->
+    <div class="row contact_page">
       <div class="col-sm-12 static_page_container">
         <div class="col-sm-6">
             <div style="margin: 20px; border: 1px solid #DADCE5; height:420px;"> <!-- dummy -->
@@ -47,27 +94,25 @@
         </div>  
         <div class="col-sm-6">
           <div class="mission_content col-sm-10">
-            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of martial artists who practice restorative exercises.  These traditional healing practitioners combine their skills to provide a comprehensive training system that empowers people to lead healthier happier and fuller lives.
+            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of
           </div>
         </div>  
       </div>
     </div>   
-
-    <!-- Third Page  -->
-    <div class="row discipline_page">
-      <div class="col-sm-12 static_page_container">
-        <div class="col-sm-6">
-          <div class="discipline_content">
-            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of martial artists who practice restorative exercises.
+    <!-- subscribe -->
+    <div class="row subscribe_page">
+      <div class="subscription_container col-sm-12">
+        <div class="col-sm-12">
+          <div class="subscribe_content">
+            Subscribe for newsletter
           </div>
-        </div> 
-        <div class="col-sm-6">
-          <div style="margin: 20px; height:420px;"> <!-- dummy -->
-          </div>
-        </div>   
+        </div>
+        <div class="col-sm-12 text-center">
+          <input class="subscription_input" type="text" name="input" value="youremail@example.com">
+          <button class="subscription_btn">Submit</button>
+        </div>
       </div>
-    </div>   
-
+    </div>  
 
   </body>
 </html>
