--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@
 html, 
 body{height:100%; overflow-x:hidden;}
 
-body {height:100%: font: 14px; font-family: 'PT Serif', serif !important; height:auto;}
+body {color: #595959 !important; height:100%: font: 14px; font-family: 'PT Serif', serif !important; height:auto;}
 a {color: #00B7FF;}
 
 /*////////////////////////
@@ -29,21 +29,41 @@ nav .title_short{display: none;}
 .welcome_page .tagline{font-size: 1.3em; margin:30px 0; padding: 10px; font-style: italic}
 
 /*Second page*/
-.mission_page{height:auto; padding: 0 0 30px 0;}
-.mission_content{font-size: 1.2em; margin: 20% 0 auto;}
+.mission_page{height:auto; padding: 40px 0;}
+.mission_rec_pic{width: 584px;margin: 45px 0 45px 123px;height: 355px;}
+.mission_content{font-size: 1.2em; margin: 29% 0 auto;}
+
+
+.tagline_page{background-color: #E2E4EA;}
+.tagline_page .tagline_content{color: #595959; font-size: 1.7em; font-weight: 100; padding:30px 0; font-style: italic;}
 
 /*Third page*/
-.discipline_page{background-color: #5C5E66;}
-.discipline_page .discipline_content{font-size: 1.3em; color: #F0F0F0; font-weight: 100; margin: 20% 0 0 0;}
-
+.discipline_page{background-color: #EBEDF5;}
+.discipline_cir_pic{width:300px; margin:50px auto;}
+.discipline_page .discipline_content{font-size: 1.5em; font-weight: 100; margin: 29% 0 0 0;}
+.discipline_description{padding: 0 25px;}
 
 @media only screen and (max-width : 769px) {
   .welcome_page .tagline{margin:25px 0;}
   .primary_promo_vid_container{width:100%;}  
   .mission_content{font-size: 1.2em; margin: 0 auto;}
+  .tagline_page .tagline_content{font-size: 1.2em; font-weight: 100; padding:20px 0; font-style: italic;}
+
   nav .title-full{display:none;}
   nav .title-short{display:inline-block;}
 
+}   
+
+/*Subscription*/
+
+.subscribe_page{background-color: #E2E4EA;}
+.subscribe_page .subscribe_content{font-size: 2em; text-align: center; margin-bottom: 20px; font-style: italic;}
+.subscription_container{margin: 100px 0 120px 0;}
+.subscription_input{width:400px; height:40px; font-size: 1.4em; text-align: center; font-style: italic; color:#E3E3E3; outline: none}
+.subscription_btn{font-size: 1.3em; height:40px; margin-bottom: 4px;}
+
+@media only screen and (max-width : 769px) {
+  .subscription_input{width:75%; text-align: center;}
 }   
 
 
@@ -56,6 +76,11 @@ nav .title_short{display: none;}
 .margin_top_30{margin-top: 30px;}
 .margin_top_40{margin-top: 40px;}
 .margin_top_50{margin-top: 50px;}
+.margin_bottom_10{margin-bottom: 10px;}
+.margin_bottom_20{margin-bottom: 20px;}
+.margin_bottom_30{margin-bottom: 30px;} 
+.margin_bottom_40{margin-bottom: 40px;}
+.margin_bottom_50{margin-bottom: 50px;}
 
 
 
