--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,21 +6,21 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap_overlap.css">
-    
+
     <link href='https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700' rel='stylesheet' type='text/css'>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script> 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.sticky/1.0.3/jquery.sticky.min.js"></script>
 
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/js/bootstrap.min.css"> -->
   </head>
   <body>
-    
+
     <!-- Navigation  -->
     <nav id="ut-nav">
       <span class="title title_full">URBAN TEMPLE</span>
-      <span class="title title_short">[ UT ]</span> 
+      <span class="title title_short">[ UT ]</span>
     </nav>
 
     <!--  welcome  -->
@@ -35,21 +35,28 @@
           </div>
         </div>
       </div>
-    </div>  
+    </div>
 
     <!-- mission  -->
-    <div class="row mission_page">
-      <div class="col-sm-12 static_page_container">
-        <div class="col-sm-6">
-          <img class="mission_rec_pic" src="images/rec-mock.png" alt="">
-        </div>  
-        <div class="col-sm-6">
-          <div class="mission_content col-sm-10">
-            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of
+    <div class="mission_page">
+      <div class="mission_container">
+        <div class="row"
+          <div class="col-sm-12">
+            <div class="col-sm-6">
+              <div class="block_420">
+                <div style="margin: -125px 0 0 -140px; border: 1px solid #DADCE5;width: 400px;height: 250px;position: absolute;top: 50%;left: 29%;"> <!-- dummy -->
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="mission_content">
+                Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of
+              </div>
+            </div>
           </div>
-        </div>  
+        </div>
       </div>
-    </div>   
+    </div>
 
     <!-- tagline  -->
     <div class="row tagline_page">
@@ -58,47 +65,55 @@
           Urban Temple aims to provide a space admis
         </div>
       </div>
-    </div>  
+    </div>
 
     <!-- discipline -->
-    <div class="row discipline_page">
-      <div class="col-sm-12 static_page_container margin_bottom_50">
-        <div class="col-sm-4 no-side-padding text-center">
-          <img class="discipline_cir_pic" src="images/circle-mock.png" alt="">
-          <div class="discipline_description">
-            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  
-          </div> 
-        </div>
-        <div class="col-sm-4 no-side-padding text-center">    
-          <img class="discipline_cir_pic" src="images/circle-mock.png" alt="">
-          <div class="discipline_description">
-            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  
-          </div> 
-        </div> 
-        <div class="col-sm-4 no-side-padding text-center">  
-          <img class="discipline_cir_pic"src="images/circle-mock.png" alt="">
-          <div class="discipline_description">
-            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  
-          </div> 
-        </div>     
-      </div> 
-    </div>   
-    
-    <!-- schedule -->
-    <div class="row contact_page">
-      <div class="col-sm-12 static_page_container">
-        <div class="col-sm-6">
-            <div style="margin: 20px; border: 1px solid #DADCE5; height:420px;"> <!-- dummy -->
-              <div class="text-center" style="padding-top: 25%;"> image</div> <!-- dummy -->
+    <div class="discipline_page">
+      <div class="discipline_container">
+        <div class="row">
+          <div class="col-sm-12 margin_bottom_50">
+            <div class="col-sm-4 no-side-padding text-center">
+              <img class="discipline_cir_pic" src="images/circle-mock.png" alt="">
+              <div class="discipline_description">
+                Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.
+              </div>
             </div>
-        </div>  
-        <div class="col-sm-6">
-          <div class="mission_content col-sm-10">
-            Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of
+            <div class="col-sm-4 no-side-padding text-center">
+              <img class="discipline_cir_pic" src="images/circle-mock.png" alt="">
+              <div class="discipline_description">
+                Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.
+              </div>
+            </div>
+            <div class="col-sm-4 no-side-padding text-center">
+              <img class="discipline_cir_pic"src="images/circle-mock.png" alt="">
+              <div class="discipline_description">
+                Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.
+              </div>
+            </div>
           </div>
-        </div>  
+        </div>
       </div>
-    </div>   
+    </div>
+
+    <!-- contact  -->
+    <div class="contact_page">
+      <div class="contact_container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="col-sm-6">
+              <div style="margin: 20px; border: 1px solid #DADCE5; height:320px;"> <!-- dummy -->
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="contact_content">
+                Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- subscribe -->
     <div class="row subscribe_page">
       <div class="subscription_container col-sm-12">
@@ -112,7 +127,15 @@
           <button class="subscription_btn">Submit</button>
         </div>
       </div>
-    </div>  
+      <div class="center_align margin_bottom_30">
+        <div class="share_text">share with friends:</div>
+        <a class="share_facebook_btn share_link_bg" href="http://pacific-cliffs-7946.herokuapp.com/"></a>
+        <a class="share_twitter_btn share_link_bg" href="http://pacific-cliffs-7946.herokuapp.com/"></a>
+      </div>
+      <div class="center_align margin_bottom_30">
+        <span class="copy_right">&copy;2015 Urban Temple</span>
+      </div>
+    </div>
 
   </body>
 </html>
@@ -126,10 +149,10 @@
 </script>
 
 
-<!-- 
+<!--
 
 
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." 
+"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 
 
 -->
