--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.sticky/1.0.3/jquery.sticky.min.js"></script>
+    
 
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/js/bootstrap.min.css"> -->
   </head>
@@ -101,7 +102,8 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="col-sm-6">
-              <div style="margin: 20px; border: 1px solid #DADCE5; height:320px;"> <!-- dummy -->
+              <div id="gmap_canvas" style="margin: 20px; border: 1px solid #DADCE5; height:320px;">
+              <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:320px;width:430px;"><div id="gmap_canvas" style="height:320px;width:430px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://wordpress-themes.org" id="get-map-data">http://wordpress-themes.org</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,disableDefaultUI:true,center:new google.maps.LatLng(37.7745832,-122.4309096),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.7745832, -122.4309096)});infowindow = new google.maps.InfoWindow({content:"<b></b><br/>548 Fillmore<br/>94117 San Francisco" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});}google.maps.event.addDomListener(window, 'load', init_map);</script> <!-- dummy -->
               </div>
             </div>
             <div class="col-sm-6">
