--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,10 +102,10 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="col-sm-6">
-              <div id="gmap_canvas" style="margin: 20px; border: 1px solid #DADCE5; height:320px;">
-              <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:320px;width:430px;"><div id="gmap_canvas" style="height:320px;width:430px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">The Center SF</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,disableDefaultUI:true,center:new google.maps.LatLng(37.7745832,-122.4309096),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.7745832, -122.4309096)});infowindow = new google.maps.InfoWindow({content:"<b>The Center SF</b><br/>548 Fillmore<br/> San Francisco, 94117" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script><!-- dummy -->
+              <div class="google_map_wrapper">
+                <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJOak3a6SAhYAR5heh5px9Kow&key=AIzaSyAgYPmvewT_nuWOmaaNu2BTFWO1gZK-SWw" allowfullscreen></iframe>
               </div>
-            </div>
+              </div>
             <div class="col-sm-6">
               <div class="contact_content">
                 Urban Temple aims to provide a space admist the hubbub of city life to destress and detox.  The community comprises of a collective of
@@ -115,6 +115,13 @@
         </div>
       </div>
     </div>
+
+
+    <style>
+      .google_map_wrapper iframe {width:100%; height: 400px;}
+    </style>
+
+
 
     <!-- subscribe -->
     <div class="row subscribe_page">
@@ -150,6 +157,9 @@
   });
 </script>
 
+<style>
+
+</style>
 
 <!--
 
